# icemaker

./: .gitignore  README.md  dev.sh  extract_sim_params.py  icemaker-log-2026-01-25-03-46-32.csv  mark_icemaker2.py  pyproject.toml  setup.sh
config/: default.yaml  development.yaml  production.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Configuration.tsx  Controls.tsx  Dashboard.tsx  DataLogger.tsx  MainPanel.tsx  RelayStatus.tsx  SettingsPanel.tsx  StateDisplay.tsx  SystemDiagram.tsx  TemperatureChart.tsx
frontend/src/contexts/: DataLoggerContext.tsx  TemperatureContext.tsx
frontend/src/hooks/: useIcemakerState.ts  useWebSocket.ts
frontend/src/styles/: index.css
frontend/src/types/: icemaker.ts
homeassistant/: README.md
homeassistant/custom_components/icemaker/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  sensor.py  strings.json  switch.py
src/icemaker/: __init__.py  __main__.py  config.py
src/icemaker/api/: __init__.py  app.py  schemas.py  websocket.py
src/icemaker/core/: __init__.py  controller.py  events.py  fsm.py  states.py
src/icemaker/hal/: __init__.py  base.py  factory.py  mock_gpio.py  mock_sensors.py  rpi_gpio.py  rpi_sensors.py
src/icemaker/simulator/: __init__.py  physics_model.py  (+2 more)
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_controller.py
tests/unit/: test_fsm.py  test_hal.py  test_states.py  test_thermal_model.py
(+5 files in other folders)
