[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icemaker"
version = "1.0.0"
description = "Industrial icemaker control system with async FSM and web interface"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Karl" }
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "ruff>=0.14.11",
    "mypy>=1.19.1",
]

[project.optional-dependencies]
rpi = [
    "RPi.GPIO>=0.7.1",
    "w1thermsensor>=2.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]

[project.scripts]
icemaker = "icemaker.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/icemaker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
